# interface-kube-control

./: .gitignore  tox.ini
.github/workflows/: publish.yaml  tests.yaml
ops/: README.md  pyproject.toml  setup.py  tox.ini
ops/ops/interface_kube_control/: consts.py  model.py  provides.py  requires.py
ops/tests/data/: kube_control_data.yaml  kube_control_request.yaml  test-ca-cert.pem
ops/tests/unit/: test_ops_provides.py  test_ops_requires.py
