[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ops.interface_kube_control"
version = "0.2.1"
description = "Kube-Control Interface for Charmed Operators"
readme = "README.md"
requires-python = ">3.8"
license = { text = "Apache" }
authors = [
    { name= "Adam Dyess", email = "adam.dyess@canonical.com" }
]
dependencies = [
    "ops",
    "pydantic<2"
]
keywords = [
    "juju",
    "charming",
    "kubernetes",
    "ops",
    "framework",
    "interface",
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]

[project.urls]
Repository = "https://github.com/charmed-kubernetes/interface-kube-control"

# Testing tools configuration
[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true

[tool.isort]
line_length = 99
profile = "black"

[tool.mypy]
explicit_package_bases = true
namespace_packages = true
plugins = "pydantic.mypy"

[tool.ruff]
line-length = 99
extend-exclude = ["__pycache__", "*.egg_info"]

[tool.setuptools]
zip-safe = true

[tool.setuptools.packages.find]
namespaces = true

[dependency-groups]
format = [
    "ruff"
]
lint = [
    "mypy",
    "types-PyYAML",
    {include-group = "format"},
    {include-group = "unit"},
]
publish = []
unit = [
    "coverage[toml]>=7.6.1",
    "pytest>=8.3.4",
]
