[build-system]
requires = ["setuptools >= 61.0", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"
root = ".."

[project]
name = "ops.interface_kube_control"
dynamic = ["version"]
description = "Kube-Control Interface for Charmed Operators"
readme = "README.md"
requires-python = ">3.8"
license = { text = "Apache" }
authors = [
    { name= "Adam Dyess", email = "adam.dyess@canonical.com" },
    { name= "Mateo Florido", email = "mateo.florido@canonical.com" }
]
dependencies = [
    "ops",
    "pydantic<2"
]
keywords = [
    "juju",
    "charming",
    "kubernetes",
    "ops",
    "framework",
    "interface",
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]

[project.urls]
Repository = "https://github.com/charmed-kubernetes/interface-kube-control"

[tool.isort]
line_length = 99
profile = "black"

[tool.mypy]
explicit_package_bases = true
namespace_packages = true
plugins = "pydantic.mypy"

[tool.ruff]
line-length = 99
extend-exclude = ["__pycache__", "*.egg_info"]

[tool.setuptools]
zip-safe = true

[tool.setuptools.packages.find]
namespaces = true

[dependency-groups]
format = [
    "ruff"
]
lint = [
    "mypy",
    "types-PyYAML",
    {include-group = "format"},
    {include-group = "unit"},
]
publish = []
unit = [
    "pytest>=8.3.4",
    "pytest-cov>=5.0.0"
]
